Fix bug with reading nbt